k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-ref: f7580aa1eb6f7176705176e201ecff4de93edafb
    app.openshift.io/vcs-uri: https://github.com/bdison/garage-ctbc-frontend
  labels:
    app: bdisonlin-live-pfs
    app.kubernetes.io/instance: bdisonlin-live-pfs
    app.kubernetes.io/name: bdisonlin-live-pfs
    app.openshift.io/runtime: react
  name: bdisonlin-live-pfs
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: bdisonlin-live-pfs
      app.kubernetes.io/name: bdisonlin-live-pfs
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: bdisonlin-live-pfs
        app.kubernetes.io/name: bdisonlin-live-pfs
    spec:
      containers:
        - env:
            - name: INGRESS_HOST
            - name: PROTOCOLS
            - name: LOG_LEVEL
              value: debug
          image: quay.io/bdisonlin/ctbc-front-buildah
          imagePullPolicy: IfNotPresent
          name: bdisonlin-live-pfs
          ports:
            - containerPort: 5000
              name: http
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
