k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bdisonlin-live-pfs
    app.kubernetes.io/instance: bdisonlin-live-pfs
    app.kubernetes.io/name: bdisonlin-live-pfs
  name: bdisonlin-live-pfs
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/instance: bdisonlin-live-pfs
    app.kubernetes.io/name: bdisonlin-live-pfs
  sessionAffinity: None
  type: ClusterIP
